--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+#app{
+    background-color: #0d6efd;
+}
+
 .height-full{
     height: 100vh;
 }
@@ -27,7 +31,8 @@ li{
 }
 
 li:hover{
-    background-color: rgb(168, 168, 168);
+    background-color: #0d6efd;
+    color: white;
 }
 
 li:hover .cross{
